
[package]
name = "scroll-address-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
web3 = "0.18"
bb8-redis = "0.13"
futures = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
zstd = "0.12"
log = "0.4"
env_logger = "0.10"
indicatif = "0.17"
hex = "0.4.3"